[gd_scene load_steps=4 format=3 uid="uid://qyqr85rj3ro0"]

[ext_resource type="Script" uid="uid://becrt37i0c2dl" path="res://Scenes/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://fob1aa3m4avb" path="res://SpaceShooterAssetPack/SpaceShooterAssets/SpaceShooterAssetPack_Ships.png" id="1_v0iea"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvnsp"]
radius = 7.0

[node name="Player" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_cvnsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cvnsp")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("1_v0iea")
region_enabled = true
region_rect = Rect2(32, 64, 16, 16)

[node name="ShootPoint" type="Node2D" parent="."]
position = Vector2(9, 0)

[node name="BulletCooldown" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="BulletCooldown" to="." method="_on_bullet_cooldown_timeout"]
